# clock-sync-tec-502

./: README.md  docker-compose.yaml
api/: Dockerfile  main.py  pyproject.toml  utils.py
api/routers/: root_routes.py
