[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jônatas A. <jonatasaraujo2257@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
